[gd_scene load_steps=17 format=3 uid="uid://b4alft8jo1t5p"]

[ext_resource type="Script" path="res://melee cop.gd" id="1_prndj"]
[ext_resource type="Texture2D" uid="uid://h10v34vfnysc" path="res://assests/Cop._Demo.png" id="2_ahd8x"]
[ext_resource type="Texture2D" uid="uid://cjd3uwhajuf7e" path="res://assests/Cop Stunned F1.png" id="3_2mm2l"]
[ext_resource type="Texture2D" uid="uid://x71affs0ec6n" path="res://assests/Cop Stunned F2.png" id="4_avpf8"]
[ext_resource type="Texture2D" uid="uid://brhgp0rltk3ia" path="res://assests/brass knuckles.png" id="5_pvsie"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbd5q"]
size = Vector2(102, 247)

[sub_resource type="SpriteFrames" id="SpriteFrames_apku0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ahd8x")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ahd8x")
}],
"loop": true,
"name": &"Punch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ahd8x")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2mm2l")
}, {
"duration": 1.0,
"texture": ExtResource("4_avpf8")
}],
"loop": true,
"name": &"Stunned",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc4g5"]
size = Vector2(2170, 287)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6xn6"]
size = Vector2(165, 268)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjh3m"]
size = Vector2(122, 283)

[sub_resource type="Animation" id="Animation_7noil"]
resource_name = "Run"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gfkyh"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3ciwo"]
resource_name = "Stunned"
length = 0.20001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Stunned"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_uu1de"]
resource_name = "Punch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Punch"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/BrassKnuckles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-28.0863, 91.2806), Vector2(372.144, 147.453), Vector2(-533.641, 70.2159), Vector2(-28.0863, 91.2806)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Damage/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_t1elx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/BrassKnuckles:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-28.0863, 91.2806)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Damage/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_54g64"]
_data = {
"Idle": SubResource("Animation_gfkyh"),
"Punch": SubResource("Animation_uu1de"),
"RESET": SubResource("Animation_t1elx"),
"Run": SubResource("Animation_7noil"),
"Stunned": SubResource("Animation_3ciwo")
}

[node name="melee cop" type="CharacterBody2D" groups=["Enemies"]]
collision_mask = 7
script = ExtResource("1_prndj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 17.5)
shape = SubResource("RectangleShape2D_tbd5q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(0.142418, 0.142418)
sprite_frames = SubResource("SpriteFrames_apku0")
animation = &"Idle"
autoplay = "Idle"

[node name="BrassKnuckles" type="Sprite2D" parent="AnimatedSprite2D"]
position = Vector2(-28.0863, 91.2806)
scale = Vector2(2.47223, 2.47223)
texture = ExtResource("5_pvsie")

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
position = Vector2(21, 11.5)
shape = SubResource("RectangleShape2D_yc4g5")
debug_color = Color(1, 0.856667, 0.14, 0.027451)

[node name="PunchAOE" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchAOE"]
position = Vector2(-72.5, 11)
shape = SubResource("RectangleShape2D_a6xn6")

[node name="SpawnPoint" type="Marker2D" parent="."]
visible = false
position = Vector2(-88, -135)

[node name="StunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LeftEdge" type="RayCast2D" parent="."]
position = Vector2(-65, 110)
collision_mask = 3

[node name="RightEdge" type="RayCast2D" parent="."]
position = Vector2(53, 113)
collision_mask = 3

[node name="Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
position = Vector2(-93, 6.5)
shape = SubResource("RectangleShape2D_gjh3m")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_54g64")
}

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PunchAOE" to="." method="_on_punch_aoe_body_entered"]
[connection signal="body_exited" from="PunchAOE" to="." method="_on_punch_aoe_body_exited"]
[connection signal="timeout" from="StunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="body_entered" from="Damage" to="." method="_on_damage_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
